--- a/themes/custom/masradix/scss/components/_view.scss
+++ b/themes/custom/masradix/scss/components/_view.scss
@@ -54,7 +54,7 @@
 
 
 .view--requests .view__filters a,
-.view__filters div.form-item-field-status-term,
+.view__filters div.form-item-field-status,
 .view__filters div.form-item-field-category {
   display: none;
 }
