--- a/themes/custom/masradix/templates/node/node--service-request--gallery.html.twig
+++ b/themes/custom/masradix/templates/node/node--service-request--gallery.html.twig
@@ -96,7 +96,7 @@ set cols = content.field_status_notes['#field_name'] and content.field_category[
                 rgba(0, 0, 0, 0.4)
                 ), url({{ file_url(node.field_request_image.entity.fileuri | image_style('medium') ) }});
                 background-repeat:no-repeat;
-                background-size:auto;
+                background-size:100%;
                 background-position:center;">
             <a href="{{ url }}" rel="bookmark">{{ label }}</a>
         </h2>
