--- a/themes/custom/masradix/scss/components/_node.scss
+++ b/themes/custom/masradix/scss/components/_node.scss
@@ -59,7 +59,6 @@ article.service-request--teaser footer {
 }
 
 
-
 .service-request h2:before {
   content: "\f030";
   font-family: FontAwesome;
@@ -70,6 +69,12 @@ article.service-request--teaser footer {
   opacity: 0.3;
   top: 10px
 }
+
+.view--front-gallery .service-request h2:before {
+  left: 40%;
+  top: 20px
+}
+
 
 .service-request h2 {
 
