Change image style for gallery view.

--- a/themes/custom/masradix/templates/node/node--service-request--gallery.html.twig
+++ b/themes/custom/masradix/templates/node/node--service-request--gallery.html.twig
@@ -94,7 +94,7 @@ set cols = content.field_status_notes['#field_name'] and content.field_category[
         <h2{{ title_attributes }} style="background: linear-gradient(
                 rgba(0, 0, 0, 0.4),
                 rgba(0, 0, 0, 0.4)
-                ), url({{ file_url(node.field_request_image.entity.fileuri | image_style('medium') ) }});
+                ), url({{ file_url(node.field_request_image.entity.fileuri | image_style('large') ) }});
                 background-repeat:no-repeat;
                 background-size:100%;
                 background-position:center;">
