Boostrapify blocks for footer.

--- a/themes/custom/masradix/templates/block/block--markaspotbuiltwithblock.html.twig
+++ b/themes/custom/masradix/templates/block/block--markaspotbuiltwithblock.html.twig
@@ -27,10 +27,8 @@
 #}
 {%
 set classes = [
-'block-content',
-'block-content--' ~ bundle|clean_class,
-'block-content--' ~ id|clean_class,
-bundle|clean_class
+    'col-sm-6',
+'block-content'
 ]
 %}
 <div{{ attributes.addClass(classes).addClass('row')}}>
