--- a/themes/custom/masradix/templates/block/block--system-menu-block--footer.html.twig
+++ b/themes/custom/masradix/templates/block/block--system-menu-block--footer.html.twig
@@ -27,7 +27,7 @@
 #}
 {%
 set classes = [
-    'col-sm-6',
+    'col-md-12',
 'block-content',
 'block-content--' ~ bundle|clean_class,
 'block-content--' ~ id|clean_class,
