--- a/themes/custom/masradix/scss/components/_block.scss
+++ b/themes/custom/masradix/scss/components/_block.scss
@@ -179,7 +179,7 @@ a.btn-circle span {
   min-width: 37px;
 }
 
-.shariff li a,
+
 .mas-action li a {
   background: $gray-lighter;
 }
@@ -226,7 +226,7 @@ a.btn-circle span {
 
 
 .block-content--mas-custom {
-  margin: 50px 0;
+  margin: 50px 20px 0 0;
 }
 
 .block-content--masradix-direct-links.mas-custom {
