--- a/themes/custom/masradix/scss/mas/_sidebarNav.scss
+++ b/themes/custom/masradix/scss/mas/_sidebarNav.scss
@@ -344,9 +344,6 @@ body {
     margin: 0;
   }
 
-  .navbar-brand img.site-logo {
-    margin: 0 0 -10px 10px;
-  }
 
   .navbar-brand {
       float: left!important;
@@ -364,7 +361,7 @@ body {
   }
 
   .navbar-left {
-    margin: 0 10px 0 0px;
+    margin: 20px 10px 0 0px
   }
 
   .navbar-right {
