--- a/themes/custom/masradix/assets/css/color/colors.css
+++ b/themes/custom/masradix/assets/css/color/colors.css
@@ -48,23 +48,23 @@ body {
 .btn-default.active,
 .open > .btn-default.dropdown-toggle {
   color: #7bceff;
-  filter: brightness(85%);
-  position: relative;
-  overflow: hidden;
-  -webkit-transform: translate3d(0,0,0);
   background-color: #055a8e;
-  border-color: #055a8e;
-  background-image: -webkit-linear-gradient(top, #055a8e 0%, #055a8e 100%);
-  background-image: linear-gradient(to bottom, #055a8e 0%, #055a8e 100%);
-  box-shadow:
-      0 1px 3px rgba(0,0,0, 0.12),
-      0 1px 2px rgba(0,0,0, 0.24);
+  text-decoration:none;
+}
+
+.btn.visualize {
+  color: #055a8e;
+  background-color: #7bceff 
+}
+
+.btn.request {
+  color: #055a8e;
+  background-color: #7bceff 
 }
 
 
 .btn.start:after {
     background-color: #037fcc;
-
 }
 
 .btn.start:hover,
@@ -74,8 +74,9 @@ body {
 .btn-default:active,
 .btn-default:hover,
 .btn-default:focus{
-  color: #7bceff;
-  background-color: inherit!important;
+  color: #055a8e;
+  background-color: #1d84c3 
+  /* background-color: inherit!important; */
 }
 
 .view--requests .view__header,
@@ -160,15 +161,7 @@ a:active,
   .navbar-default div.container {
     background: #e2e2e2;
   }
-
-  .navbar-inner {
-    /* background: #ddd;
-
-    box-shadow:
-      0 1px 3px rgba(0,0,0, 0.12),
-      0 1px 2px rgba(0,0,0, 0.24);
-     */
-  }
+  
 
   .links.inline a,
   .navbar-inner li {
