--- a/themes/custom/masradix/scss/components/_node.scss
+++ b/themes/custom/masradix/scss/components/_node.scss
@@ -3,8 +3,8 @@
 article.service-request--teaser {
   background: $gray-lighter;
   box-shadow:
-    0 1px 3px rgba(0,0,0, 0.12),
-    0 1px 2px rgba(0,0,0, 0.24);
+    0 2px 2px 0 rgba(0,0,0,0.16), 
+    0 0 0 1px rgba(0,0,0,0.08)
 }
 
 .service-request__field-category .label-default,
