--- a/themes/custom/masradix/scss/masradix.style.scss
+++ b/themes/custom/masradix/scss/masradix.style.scss
@@ -79,6 +79,10 @@
 // -----------------------------------------------------------------------------
 @import "bootswatch/bootswatch";
 
+// Bootstrap select
+@import "../../../../../../../../web/libraries/bootstrap-select/sass/bootstrap-select.scss";
+@import "../../../../../../../../web/libraries/bootstrap-select/sass/variables.scss";
+
 // Radix styles overrides and fixes.
 // -----------------------------------------------------------------------------
 // Radix styles overrides and fixes.
