--- a/themes/custom/masradix/assets/css/color/colors.css
+++ b/themes/custom/masradix/assets/css/color/colors.css
@@ -21,12 +21,6 @@ body {
   border-color: #a3e5ff !important;
 }
 
-.btn,
-.btn.btn-success.btn-file,
-.leaflet-control-locate a {
-  color: #7bceff;
-  background-color: #055a8e;
-}
 
 .notifications li,
 .hamburger.is-closed .hamb-top,
@@ -38,18 +32,42 @@ body {
   background-image: linear-gradient(to bottom, #055a8e 0%, #055a8e 100%);
 }
 
+.btn-default:active:hover {
+    background-color: #055a8e;
+    color: #fff
+}
+
+
 .btn,
+.mas-action li a,
 .notifications li,
-.button,
 .btn-default,
 .add-block p a,
 .btn-default:active,
 .pager li > a, .pager li > span,
 .btn-default.active,
 .open > .btn-default.dropdown-toggle {
+  color: #055a8e;
+  text-transform:uppercase;
+  border: 1px solid #999;
+  position: relative;
+}
+
+.button.button--primary {
   color: #7bceff;
   background-color: #055a8e;
   text-decoration:none;
+  text-transform:inherit;
+}
+
+.btn.start{
+    text-transform:inherit;
+    text-decoration:none;
+}
+.btn.report {
+  color: #7bceff;
+  background-color: #055a8e;
+  text-transform:inherit;
 }
 
 .btn.visualize {
@@ -62,7 +80,6 @@ body {
   background-color: #7bceff 
 }
 
-
 .btn.start:after {
     background-color: #037fcc;
 }
@@ -73,21 +90,20 @@ body {
 .btn-circle:hover,
 .btn-default:active,
 .btn-default:hover,
-.btn-default:focus{
-  color: #055a8e;
-  background-color: #1d84c3 
-  /* background-color: inherit!important; */
+.btn-default:focus {
+  color: #f5f5f5;
+  background-color: #055a8e;
+    text-transform:inherit;
 }
 
 .view--requests .view__header,
 .shariff-button a,
-.mas-action a,
 .add-block,
 footer#footer,
 .region-sidebar li.list-group-item,
 fieldset#edit-field-geolocation-0-map-container,
 .form-item-field-request-image-0 {
-  background-color: #eeeeee;
+  background-color: #eee;
 }
 
 .block.block--markaspotbuiltwithblock {
