--- a/themes/custom/masradix/scss/mas/_map.scss
+++ b/themes/custom/masradix/scss/mas/_map.scss
@@ -11,7 +11,9 @@ body .stuck {
   top:0;
   margin: 0;
   padding: 0;
-  box-shadow: -1px 2px 4px #666;
+  box-shadow:
+    0 2px 2px 0 rgba(0,0,0,0.16), 
+    0 0 0 1px rgba(0,0,0,0.08);  
   z-index: 999;
 
 }
