--- a/themes/custom/masradix/templates/content-edit/image-widget.html.twig
+++ b/themes/custom/masradix/templates/content-edit/image-widget.html.twig
@@ -12,7 +12,7 @@
 #}
 <div{{ attributes }}>
     {% if data.upload %}
-      <label class="image-widget-data btn btn-block btn-default"><i class="fa fa-folder-open"></i> Browse
+      <label class="image-widget-data btn btn-block btn-default"><i class="fa fa-camera"></i> {% trans %}Add Photo{% endtrans %}
           {{ data.upload }}
       </label>
     {% endif %}
