Fix button and selectbox styles.

--- a/themes/custom/masradix/assets/css/color/colors.css
+++ b/themes/custom/masradix/assets/css/color/colors.css
@@ -49,7 +49,7 @@ body {
 .open > .btn-default.dropdown-toggle {
   color: #055a8e;
   text-transform:uppercase;
-  border: 1px solid #999;
+  /* border: 1px solid #999; */
   position: relative;
 }
 
