--- a/themes/custom/masradix/templates/node/node--service-request.html.twig
+++ b/themes/custom/masradix/templates/node/node--service-request.html.twig
@@ -117,7 +117,7 @@ set category_icon = [
   <div{{ content_attributes.addClass('content') }}>
     {{ content|without('field_status_notes','field_category','field_request_image') }}
   </div>
-  <div class="container">
+  <div class="container category-status">
     <div class="service-request__field-status col-sm-{{ cols }} {{ 'color-'  ~  mas_status['color'] }}"><div class="field__item label label-default"><span class="fa {{ mas_status['icon'] }} "></span><div class="field__item label label-default">{{ mas_status['label'] }}</div></div></div>
     <div class="service-request__field-category col-sm-{{ cols }} {{  'color-'  ~  mas_category['color'] }}"><div class="field__item label label-default"><span class="fa {{ mas_category['icon'] }}"></span><div class="field__item label label-default">{{ mas_category['label'] }}</div></div></div>
   </div>
