Fix logo width for IE 11.

--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7449,7 +7449,8 @@ img.site-logo {
   margin: 20px auto; }
   @media (min-width: 1200px) {
     img.site-logo {
-      max-height: 40px; } }
+      max-height: 40px;
+      max-width: 40px; } }
   @media (max-width: 991px) {
     img.site-logo {
       max-height: 100px; } }
