--- a/themes/custom/masradix/scss/components/_sitebranding.scss
+++ b/themes/custom/masradix/scss/components/_sitebranding.scss
@@ -4,6 +4,7 @@ img.site-logo {
 
   @media (min-width: 1200px) {
     max-height: 40px;
+    max-width: 40px;
   }
   @media (max-width: $screen-sm-max) {
     max-height: 100px;
