--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7450,10 +7450,12 @@ img.site-logo {
   @media (min-width: 1200px) {
     img.site-logo {
       max-height: 40px;
-      max-width: 40px; } }
+      max-width: 40px;
+      display: none; } }
   @media (max-width: 991px) {
     img.site-logo {
-      max-height: 100px; } }
+      max-height: 100px;
+      display: block; } }
   @media (max-width: 1199px) {
     img.site-logo {
       max-height: 80px; } }
