Update theme dependencies, hide Close Link

--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -7660,6 +7660,9 @@ Category and Status statistics
 .visualize.btn:after, .media-widget > a.visualize:after {
   content: ""; }
 
+.ui-dialog .ui-dialog-titlebar-close {
+  color: transparent; }
+
 /*
  * jQuery UI Dialog 1.10.0
  *
