--- a/themes/custom/masradix/scss/components/_form.scss
+++ b/themes/custom/masradix/scss/components/_form.scss
@@ -2,6 +2,11 @@
 // -----------------------------------------------------------------------------
 
 
+.form-group {
+  margin-bottom: 30px
+}
+
+
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   select:focus,
   textarea:focus,
