--- a/themes/custom/masradix/scss/mas/_button.scss
+++ b/themes/custom/masradix/scss/mas/_button.scss
@@ -1,59 +1,60 @@
+
+  $icon-map-marker: "\f041";
+  $icon-requests: "\f058";
+  $icon-visualization: "\f200";
+
 .btn {
   display: block;
+  padding: 10px 12px;
   overflow: hidden;
   outline: none;
-  border-radius: 2px;
-}
 
-.btn span {
-  display: block;
-}
+  span {
+    display: block;
+  }
 
-.btn:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  display: block;
-  width: 0;
-  padding-top: 0;
-  border-radius: 100%;
-  background-color: rgba(236, 240, 241, .3);
+  :before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 0;
+    padding-top: 0;
+    border-radius: 100%;
+    background-color: rgba(236, 240, 241, .3);
 
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.btn:active:before {
-  width: 120%;
-  padding-top: 120%;
-
-  transition: width .2s ease-out, padding-top .2s ease-out;
-}
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  
+  :active:before {
+    width: 120%;
+    padding-top: 120%;
+    transition: width .2s ease-out, padding-top .2s ease-out;
+  }
 
 
-$icon-map-marker: "\f041";
-$icon-requests: "\f058";
-$icon-visualization: "\f200";
 
-.btn.start {
-    &:after {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      padding-top: inherit;
-      padding-bottom: inherit;
-      width: 1.8em;
-      font-family: FontAwesome;
-      font-size: 1.3em;
-      line-height: 1.2em;
-      text-align: center;
-      transition: .2s;
-      transform-origin: 50% 60%;
+  .start {
+      &:after {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        padding-top: inherit;
+        padding-bottom: inherit;
+        width: 1.8em;
+        font-family: FontAwesome;
+        font-size: 1.3em;
+        line-height: 1.2em;
+        text-align: center;
+        transition: .2s;
+        transform-origin: 50% 60%;
+    }
   }
 }
 
