--- a/themes/custom/masradix/scss/components/_form.scss
+++ b/themes/custom/masradix/scss/components/_form.scss
@@ -6,6 +6,10 @@
   margin-bottom: 30px
 }
 
+.views-exposed-form .form-group { 
+  margin-bottom: 10px
+}
+
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   select:focus,
