--- a/themes/custom/masradix/templates/page/page.html.twig
+++ b/themes/custom/masradix/templates/page/page.html.twig
@@ -8,7 +8,7 @@
 <!-- Sidebar -->
 <div class="overlay"></div>
 
-<nav class="navbar navbar-default slideout-menu" id="sidebar-wrapper" role="navigation">
+<nav class="navbar navbar-default slideout-menu container" id="sidebar-wrapper" role="navigation">
     <div class="navbar-inner">
       {% if page.navbar_left %}
         <div class="navbar-left">
