--- a/themes/custom/masradix/scss/mas/_button.scss
+++ b/themes/custom/masradix/scss/mas/_button.scss
@@ -1,80 +1,44 @@
+$icon-map-marker: "\f041";
+$icon-requests: "\f058";
+$icon-visualization: "\f200";
 
-  $icon-map-marker: "\f041";
-  $icon-requests: "\f058";
-  $icon-visualization: "\f200";
-
-.btn {
-  display: block;
-  padding: 10px 12px;
-  overflow: hidden;
-  outline: none;
-
-  span {
-    display: block;
-  }
-
-  :before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    width: 0;
-    padding-top: 0;
-    border-radius: 100%;
-    background-color: rgba(236, 240, 241, .3);
-
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-  
-  :active:before {
-    width: 120%;
-    padding-top: 120%;
-    transition: width .2s ease-out, padding-top .2s ease-out;
-  }
-
-
-
-  .start {
-      &:after {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        padding-top: inherit;
-        padding-bottom: inherit;
-        width: 1.8em;
-        font-family: FontAwesome;
-        font-size: 1.3em;
-        line-height: 1.2em;
-        text-align: center;
-        transition: .2s;
-        transform-origin: 50% 60%;
-    }
-  }
+.start.btn span {
+  position: relative;
+  left: -12px;
+  display: inline-block;
+  width: 3em;
+  padding: 6px 12px;
+  background: rgba(255, 255, 255, 0.12);
+  border-radius: 3px 0 0 3px;
+  text-align:center
+}
+.start {
+  padding-top: 0;
+  padding-bottom: 0;
+  display:block!important;
+  text-align: left
 }
 
-.report.btn {
-  &:after {
-          content: $icon-map-marker;
-  }
+.start.btn span:before {
+  font-family: FontAwesome;
+  font-size: 1.3em;
+  line-height: 1.2em;
+  text-align: right;
 }
 
-.request.btn {
-  &:after {
-          content: $icon-requests;
-  }
+.start.btn.request span:before{
+  content: $icon-requests;
+}
+.start.btn.visualize span:before{
+  content: $icon-visualization;
+}
+.start.btn.report span:before{
+  content: $icon-map-marker;
 }
 
-.visualize.btn {
-  &:after {
-          content: $icon-visualization;
-  }
-}
+
+
+
 
 // Modal Close button
 .ui-dialog .ui-dialog-titlebar-close {
