--- a/themes/custom/masradix/scss/masradix.style.scss
+++ b/themes/custom/masradix/scss/masradix.style.scss
@@ -70,7 +70,7 @@
 @import "bootstrap/popovers";
 @import "bootstrap/carousel";
 
-// Bootstrap utility classes
+// Bootstrap Utils classes
 // -----------------------------------------------------------------------------
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
