--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -6910,7 +6910,7 @@ span.site-name {
 
 .block.block--userlogin {
   clear: both;
-  margin: 60px 20px 0 20px; }
+  margin: 60px 20px 0 0; }
 
 .block--userlogin ul {
   clear: left;
@@ -8108,7 +8108,6 @@ ul.log_list .count {
     float: none !important; }
   .navbar-nav {
     list-style: none;
-    margin: 20px 0;
     padding: 0;
     width: 256px; }
   .navbar-nav li {
@@ -8322,7 +8321,7 @@ body {
   background-color: #FFF;
   /* A background-color is required */
   min-height: 100vh;
-  box-shadow: 4px 0 1px -2px rgba(0, 0, 0, 0.68); }
+  box-shadow: 2px 0 1px -2px rgba(0, 0, 0, 0.68); }
 
 .slideout-open,
 .slideout-open body,
